[package]
name = "audius_network_monitor"
authors = ["Johannes Naylor <jonaylor89@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "audius_network_monitor"
path = "src/main.rs"

[dependencies]
tracing = {version = "0.1.37", features = ["log"]}
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.16", features = [
  "registry",
  "env-filter",
]}
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"]}
anyhow = "1.0.68"
secrecy = {version = "0.8.0", features = ["serde"]}
serde-aux = "4.1.2"
serde = {version = "1.0.152", features = ["derive"]}
config = "0.13.3"
futures = "0.3.25"
thiserror = "1.0.38"
reqwest = {version = "0.11.14", features = ["json"]}
serde_json = "1.0.91"
tokio-retry = "0.3.0"
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
secp256k1 = { version = "0.26", features = ["recovery"] }
ethereum-types = "0.14.1"
once_cell = "1.17.0"
prometheus = {version = "0.13.3", features = ["push"]}
lazy_static = "1.4.0"


[dependencies.sqlx]
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.6.2"
